force-app/main/default/objects/MC_Case__e/MC_Case__e.object-meta.xml
<CustomObject>
    <label>MC Case</label>
    <pluralLabel>MC Cases</pluralLabel>
</CustomObject>