force-app/main/default/objects/MC_Case__e/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <label>origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>