force-app/main/default/objects/MC_Case__e/fields/otherFields__c.field-meta.xml
<CustomField>
    <fullName>otherFields__c</fullName>
    <label>otherFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>