force-app/main/default/objects/MC_Case__e/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>