force-app/main/default/objects/MC_Case__e/fields/recipientId__c.field-meta.xml
<CustomField>
    <fullName>recipientId__c</fullName>
    <label>recipientId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>