force-app/main/default/objects/MC_Case__e/fields/recordTypeName__c.field-meta.xml
<CustomField>
    <fullName>recordTypeName__c</fullName>
    <label>recordTypeName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>