force-app/main/default/objects/MC_Case__e/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>subject</label>
    <length>155</length>
    <type>Text</type>
</CustomField>