force-app/main/default/objects/MC_Case__e/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>